fix: better display duplicated work item statuses
Fixes: #349
